# Banco_Malvader

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  clean.bat  cliente_data.h  compile.bat  instrucoes-de-compilacao.txt  main.c  run.bat  start.bat
data/: clientes.txt  movimentos.txt
docs/html/: doxygen_crawl.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_a.js  all_b.js  all_e.js  pages_1.js  pages_11.js  pages_12.js  pages_13.js  pages_14.js  pages_16.js  pages_17.js  pages_18.js  pages_19.js  pages_5.js  pages_6.js  pages_7.js  pages_8.js  pages_9.js  pages_a.js  pages_c.js  pages_d.js  pages_e.js  pages_f.js  searchdata.js
docs/latex/: md__r_e_a_d_m_e.tex
src/: banco.c  banco.h  cliente.c  cliente_data.h  io.c  io.h  main.c  ordenacao.c  ordenacao.h  persistencia.h  validacao.h
